lbdb (0.29.1) unstable; urgency=low

  * Get rid of strict aliasing warnings in gcc.  Thanks to Ludwig Nussel
    <ludwig.nussel@suse.de> for providing a patch.

 --

lbdb (0.29) unstable; urgency=low

  * Add new module m_evolution to access Ximian Evolution addressbook.
    Thanks to Guido Guenther <agx@debian.org> (Closes: #234345).

 -- Roland Rosenfeld <roland@debian.org>  Mon, 23 Feb 2004 12:39:42 +0100

lbdb (0.28.2) unstable; urgency=low

  * Another upgrade of m_bbdb by Aaron Kaplan <kaplan@cs.rochester.edu>.
  * Add homepage URL to the package description.
  * Quote $GNUCLIENT in m_bbdb to avoid error message when this variable
    is not defined (Closes: #231061).
  * mutt_ldap_query: Apply patch from Max Kutny <mkut@umc.ua>, which
    allows to override config file settings via command line options
    (Closes: #231261).

 -- Roland Rosenfeld <roland@debian.org>  Sat,  7 Feb 2004 14:00:12 +0100

lbdb (0.28.1) unstable; urgency=low

  * Make m_osx_addressbook compile on MacOS 10.3 and XCode, too.  Thanks
    to Yuval Kogman <nothingmuch@woobling.org> and Brendan Cully
    <brendan@kublai.com> for the patch.
  * Remove "set -e" from lbdbq, which causes trouble if grep doesn't find
    a match in some of the modules (Closes: #222647).
  * m_passwd: Ignore system accounts (UIDs, which aren't in the range
    1000-29999 on a Debian system), if PASSWD_IGNORESYS=true is set
    (Closes: #188085).
  * Allow sorting the output by "comment" field (column 3) by setting
    SORT_OUTPUT=comment (Closes: #225104).
  * Add gnuclient support to m_bbdb module.  Thanks to Aaron Kaplan
    <kaplan@cs.rochester.edu> for providing this patch.

 -- Roland Rosenfeld <roland@debian.org>  Sun, 18 Jan 2004 14:59:38 +0100

lbdb (0.28) unstable; urgency=low

  * Fix bug in ABQuery module, which crashes when it finds results in
    non-latin character sets.  Now returns UTF8 results instead.  Thanks
    to Brendan Cully <brendan@kublai.com>.