@@ -2,6 +2,8 @@ lbdb (0.29.1) unstable; urgency=low
 
   * Get rid of strict aliasing warnings in gcc.  Thanks to Ludwig Nussel
     <ludwig.nussel@suse.de> for providing a patch.
+  * Add line breaks to POD part of mutt_ldap_query.pl to make man page
+    more readable.
 
  --
 
